syntax = "proto3";

package user.v1;

import "user/v1/user.proto";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {};
}

message GetUserRequest {
  string uuid = 1;
}

message GetUserResponse {
  User user = 1;
}
